syntax = "proto3";

package io.substrait;

import "type.proto";
import "expression.proto";
import "selection.proto";


message RelCommon {

    message Direct {}
    message Emit {
        repeated int32 output_mapping = 1;
    }

    oneof kind {
        Direct direct = 1;
        Emit emit = 2;
    }

}

message ReadRel {
    RelCommon common = 1;
    Type.NamedStruct base_schema = 2;
    Expression filter = 3;
    MaskExpression projection = 4;


    oneof read_type {
        VirtualTable virtual_table = 5;
    }


    message VirtualTable {
        repeated Expression.Literal.Struct values = 1;
    }

    message LocalFiles {

        repeated FileOrFiles items = 1;

        message FileOrFiles {
            oneof path_type {
                string uri_path = 1;
                string uri_path_glob = 2;
            }

            Format format = 3;

            enum Format {
                UNKNOWN = 0;
                PARQUET = 1;
            }
        }

    }

}


message FilterRel {
    RelCommon common = 1;
    Rel input = 2;
    Expression condition = 3;
}


message Rel {
  oneof RelType {
      ReadRel read = 1;
      FilterRel filter = 2;
  }
}